# smart-fix

./: .gitignore  LICENSE  README.md
Frontend/: app.json  google-services.json  package-lock.json  package.json  tailwind.config.js
Frontend/app/: _layout.tsx  index.tsx
Frontend/app/auth/: login_user.tsx  register_tech.tsx  register_user.tsx
Frontend/hooks/: ConnectCustomer.tsx  GetIP.ts  ToastMessage.tsx
ai/: README.md  chatbot.py  proj.ipynb
backend/: README.md  environment.yml  pyproject.toml
backend/config/: app_config.yaml  auth_config.yaml  booking_config.yaml  config.yaml  search_config.yaml  service_config.yaml  technician_config.yaml  user_config.yaml
backend/database/: hot_start.sqlite3  services.json  user.sqlite3
backend/scripts/: run_services  user_service.sh
backend/services/app/: api.py
backend/services/auth/: api.py  services.py
backend/services/booking/: api.py  models.py  schemas.py  services.py
backend/services/search/: api.py  services.py
backend/services/service/: api.py  models.py  schemas.py  services.py
backend/services/technician/: api.py  models.py  schemas.py  services.py
backend/services/user/: api.py  models.py  schemas.py  services.py
backend/shared/: enums.py  middlewares.py  utils.py
backend/tests/: app.http  app_test.http  app_test.py  auth.http  auth_test.http  get_service.http  service_test.http  service_test.py  technician.http  technician_test.http  user_test.http
frontend/: README.md  app.json  package-lock.json  package.json  tailwind.config.js
frontend/app/: _layout.tsx
(+38 files in other folders)
